data/derived/sp14/progs/unify/prog3221.ml.out
Characters 77-92:
  (h1::t1, bigAdd (mulByDigit x h1::t1) r)
                   ^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
